--- a/styles/main.css
+++ b/styles/main.css
@@ -208,6 +208,25 @@ body {
 	background: #214b63;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2);
 } 
+.container-header {
+	text-align: center;
+	background: #ffffff;
+	color: #000000;
+	width: 20%;
+	height: 19px;
+	text-transform: uppercase;
+	font-size: 15px;
+	font-weight: 200;
+	margin-top: 2em;
+	margin-bottom: 1.5em;
+	padding-top: 0.5em;
+} 
+
+.container-header:hover {
+	background: #5DADE2;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2);
+} 
+
 
  .view-all {
 	position: absolute;
